add new route swagger
