# api/docs/swagger.json
@@ -64,6 +64,58 @@
                 }
             }
         },
+        "/auth/token/refresh": {
+            "post": {
+                "description": "Get Refresh JWT",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Get Refresh JWT",
+                "parameters": [
+                    {
+                        "description": "Token",
+                        "name": "token",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/usecase.GetRefreshJWTInputDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/tools.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/usecase.GetRefreshJWTOutputDTO"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/tools.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
         "/user": {
             "get": {
                 "security": [
@@ -421,7 +473,7 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "type": "string"
+                    "$ref": "#/definitions/pgtype.Timestamp"
                 },
                 "email": {
                     "type": "string"
@@ -436,7 +488,35 @@
                     "type": "string"
                 },
                 "updated_at": {
+                    "$ref": "#/definitions/pgtype.Timestamp"
+                }
+            }
+        },
+        "pgtype.InfinityModifier": {
+            "type": "integer",
+            "enum": [
+                1,
+                0,
+                -1
+            ],
+            "x-enum-varnames": [
+                "Infinity",
+                "Finite",
+                "NegativeInfinity"
+            ]
+        },
+        "pgtype.Timestamp": {
+            "type": "object",
+            "properties": {
+                "infinityModifier": {
+                    "$ref": "#/definitions/pgtype.InfinityModifier"
+                },
+                "time": {
+                    "description": "Time zone will be ignored when encoding to PostgreSQL.",
                     "type": "string"
+                },
+                "valid": {
+                    "type": "boolean"
                 }
             }
         },
@@ -449,7 +529,9 @@
         "tools.ResponseError": {
             "type": "object",
             "properties": {
-                "err": {}
+                "err": {
+                    "type": "string"
+                }
             }
         },
         "usecase.CreateUserInputDTO": {
@@ -469,6 +551,9 @@
         "usecase.DeleteUserOutputDTO": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "$ref": "#/definitions/pgtype.Timestamp"
+                },
                 "email": {
                     "type": "string"
                 },
@@ -477,6 +562,9 @@
                 },
                 "password": {
                     "type": "string"
+                },
+                "updated_at": {
+                    "$ref": "#/definitions/pgtype.Timestamp"
                 }
             }
         },
@@ -494,7 +582,25 @@
         "usecase.GetJWTOutputDTO": {
             "type": "object",
             "properties": {
-                "token": {}
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "usecase.GetRefreshJWTInputDTO": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "usecase.GetRefreshJWTOutputDTO": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
             }
         },
         "usecase.UpdateUserInputDTO": {
